--- a/src/index.css
+++ b/src/index.css
@@ -209,3 +209,46 @@ body {
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
   }
 }
+
+.contact-footer {
+  width: 100%;
+  padding: 20px;
+  background-color: #f0f0f0; /* Light gray background */
+  display: flex;
+  justify-content: center; /* Center container horizontally */
+  align-items: center;
+  bottom: 0;
+}
+
+.contact-container {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Space between items */
+}
+
+.contact-icon {
+  color: #333; /* Or any color you prefer */
+}
+
+.contact-text {
+  color: #333; /* Or any color you prefer */
+  font-size: 16px;
+  text-decoration: none; /* No underlines on links */
+}
+
+.contact-text:hover {
+  text-decoration: underline; /* Underline on hover for better interactivity */
+}
+
+
+
+.contact-image-container {
+  margin-top: 20px; /* Or any other styling you need */
+}
+
+.contact-image {
+  width: 100px; /* Adjust width as needed */
+  height: auto; /* Maintain aspect ratio */
+  border-radius: 50%; /* Optional: if you want a circular image */
+  /* Add any other styles you may want for the image */
+}
